--- a/04_Field_Experiment_Appendix.Rmd
+++ b/04_Field_Experiment_Appendix.Rmd
@@ -5,15 +5,15 @@ date: "9/16/2020"
 output: html_document
 ---
 
-This document will serve as the data wrangling portion for the failed field experiment portion of my Masters thesis.
+This document will serve as the data wrangling portion for the failed field experiment portion of my Masters thesis. First, load the packages that will be used in this script
 
 ```{r Load packages}
 
 suppressMessages(suppressWarnings({
-  ls <- c("tidyverse", "car", "broom", "extrafont", "foreach", "ggpubr")
+  ls <- c("tidyverse", "car", "extrafont", "foreach", "ggpubr", "rstatix")
   new_packages <- ls[!(ls %in% installed.packages()[, "Package"])]
   if(length(new_packages)) install.packages(new_packages)
-  sapply(ls, library, character.only = TRUE, quietly = TRUE)[0]
+  sapply(unique(c(ls, tidyverse::tidyverse_packages())), library, character.only = TRUE)[0]
   if(any(!fonts() %in% unlist(windowsFonts())) || length(fonts()) == 0) {
     font_import(prompt = FALSE)
     loadfonts(device = "win")}
@@ -21,7 +21,7 @@ suppressMessages(suppressWarnings({
 
 ```
 
-
+Next, set the directories for each of the folders for inputs and outputs. Read in the field data spreadsheet.
 
 ```{r Set directories and load data}
 
@@ -31,157 +31,107 @@ results_dir <- file.path("./04_Field_Experiment_Appendix/results")
 dir.create(plot_dir, showWarnings = FALSE)
 dir.create(results_dir, showWarnings = FALSE)
 
-field <- read.csv(file.path(data_dir, "FieldExp.csv"))
+field <- read.csv(file.path(data_dir, "FieldExp.csv")) %>% 
+  dplyr::mutate(Treatment = sub("-", "_", Treatment))
 
 ```
 
-This analysis will predominantly focus on the change in the height and number of leaves from the planting day to the harvest day. There may also be biomass readings introduced.
+The data from the field trials have two time points: Planting and Harvesting. Records for number of leaves of each individual and their respective leaf height were used for a two way repeated measures ANOVA (further below). Before doing that though, the other columns include changes in leaf height and number of leaves, and biomass collected. It's important to note here that in some cases, normality was violated for some of the treatment groups, but the analysis still proceeded. I made an arbitrary decision to allow an ANOVA if at least 5/7 of the treatments were normal, though this can change if necessary.
 
-```{r planting height and nleaves}
+```{r anova on biomass and change variables}
 
-# Ideally, there should be no difference in planting height
-# Equal variance assumption test:
-t1_height_levene <- leveneTest(Planting_Height ~ Treatment, data = field)
-# P > 0.05, so the data have equal variances.
+##### ALTERNATIVE: USE rstatix package
+vars <- c("Change_Height", "Change_Leaves", "Biomass")
 
-# Normality test
-t1_height_aov <- aov(Planting_Height ~ Treatment, data = field)
-t1_height_resid <- residuals(t1_height_aov)
-t1_height_shapiro <- shapiro.test(t1_height_resid)
-# The data indicates that normality was violated, so we can proceed with a 
-# Kruskal-Wallis test instead.
-
-t1_height_kruskal <- kruskal.test(Planting_Height ~ Treatment, data = field)
-
-# According to the data, there is no difference in planting height
-
-# These same steps are followed for the number of leaves:
-t1_nleaves_levene <- leveneTest(Planting_Leaves ~ Treatment, data = field) # pass
-t1_nleaves_aov <- aov(Planting_Leaves ~ Treatment, data = field)
-t1_nleaves_resid <- residuals(t1_nleaves_aov)
-t1_nleaves_shapiro <- shapiro.test(t1_nleaves_resid)
-t1_nleaves_kruskal <- kruskal.test(Planting_Leaves ~ Treatment, data = field)
-# Again, there is no indication that the number of leaves differs in the plugs at 
-# the time they were planted.
-
-```
-
-Moving on to the end of the experiment. I'm not sure whether keeping 0's in the dataframe is useful or not, so run both analyses to determine that. I will also try running anovas on each set to see if amending soils with any of the amendments had significant effects on any of the variables. After this, paired t-tests will need to be performed.
-
-```{r anova on all variables}
-
-vars <- names(field)[!names(field) %in% c("Treatment", "Rep")]
-tests <- sapply(c("zero", "no_zero"), function(x) {
-  if(x == "no_zero") {
-    df <- field %>% mutate(across(everything(), ~na_if(., 0))) %>% drop_na()
-  } else df <- field
-  assumptions <- sapply(vars, function(y) {
-    df2 <- dplyr::select(df, Treatment, all_of(y)) %>% dplyr::rename(data = all_of(y))
-    aov <- aov(data ~ Treatment, data = df2)
-    levene <- leveneTest(data ~ Treatment, data = df2) %>% tidy() %>% drop_na()
-    resid <- residuals(aov)
-    shapiro <- shapiro.test(resid) %>% tidy()
-    return(list(shapiro = shapiro, levene = levene, pass = c(
-      ifelse(levene$p.value > 0.05, TRUE, FALSE),
-      ifelse(shapiro$p.value > 0.05, TRUE, FALSE)), data = df2
-    ))}, simplify = FALSE, USE.NAMES = TRUE)
-  tests <- lapply(assumptions, function(y) {
-    # If all assumptions pass
-    if(all(y$pass)) {
-      aov <- aov(data ~ Treatment, data = y$data)
-      anova <- anova(aov) %>% tidy()
-      tukey <- TukeyHSD(aov) %>% tidy()
-      return(list(levene = y$levene, shapiro = y$shapiro, anova = anova, tukey = tukey))
-    } else {
-      # Try log transforming
-      df2 <- dplyr::mutate(y$data, data = log10(y$data$data + abs(min(y$data$data)) + 1))
-      aov <- aov(data ~ Treatment, data = df2)
-      levene <- leveneTest(data ~ Treatment, data = df2) %>% tidy() %>% drop_na()
-      resid <- residuals(aov)
-      shapiro <- shapiro.test(resid) %>% tidy()
-      if(levene$p.value > 0.05 && shapiro$p.value > 0.05) {
-        anova <- anova(aov) %>% tidy()
-        tukey <- TukeyHSD(aov) %>% tidy()
-        return(list(log_levene = levene, log_shapiro = shapiro, log_anova = anova, 
-                    log_tukey = tukey))
-      } else {
-        # Try square rooting it
-        df2 <- dplyr::mutate(y$data, data = sqrt(y$data$data + abs(min(y$data$data))))
-        aov <- aov(data ~ Treatment, data = df2)
-        levene <- leveneTest(data ~ Treatment, data = df2) %>% tidy() %>% drop_na()
-        resid <- residuals(aov)
-        shapiro <- shapiro.test(resid) %>% tidy()
-        if(levene$p.value > 0.05 && shapiro$p.value > 0.05) {
-          anova <- anova(aov) %>% tidy()
-          tukey <- TukeyHSD(aov) %>% tidy()
-          return(list(sqrt_levene = levene, sqrt_shapiro = shapiro, 
-                      sqrt_anova = anova, sqrt_tukey = tukey))
-        } else {
-          # Try squaring it
-          df2 <- dplyr::mutate(y$data, data = y$data$data ^ 2)
-          aov <- aov(data ~ Treatment, data = df2)
-          levene <- leveneTest(data ~ Treatment, data = df2) %>% tidy() %>% drop_na()
-          resid <- residuals(aov)
-          shapiro <- shapiro.test(resid) %>% tidy()
-          if(levene$p.value > 0.05 && shapiro$p.value > 0.05) {
-            anova <- anova(aov) %>% tidy()
-            tukey <- TukeyHSD(aov) %>% tidy()
-            return(list(levene_sqr = levene, shapiro_sqr = shapiro,
-                        anova_sqr = anova, tukey_sqr = tukey))
-          } else {
-            # If all fails, do a Kruskal test
-            kruskal <- kruskal.test(data ~ Treatment, data = y$data) %>% tidy()
-            return(list(levene = levene, shapiro = shapiro, kruskal = kruskal))
-          }
-        }
+one_way <- lapply(seq_along(vars), function(x) {
+  # Normality - if 5/7 groups pass then pass
+  y <- dplyr::rename(field, val = vars[x]) %>% 
+    dplyr::select(Treatment, val)
+  norm <- group_by(y, Treatment) %>% 
+    shapiro_test(val) %>% 
+    dplyr::mutate(normal = p > 0.05, method = "raw")
+  
+  # If not normal, log transform
+  if(!all(norm$normal) && nrow(norm[norm$normal, ]) < 5) {
+    z <- dplyr::mutate(y, val = log10(val + abs(min(val)) + 1))
+    norm <- group_by(z, Treatment) %>% 
+      shapiro_test(val) %>% 
+      dplyr::mutate(normal = p > 0.05, method = "log")
+    
+    # If still not normal, square root transform
+    if(!all(norm$normal) && nrow(norm[norm$normal, ]) < 5) {
+      z <- dplyr::mutate(y, val = sqrt(val + abs(min(val))))
+      norm <- group_by(z, Treatment) %>% 
+        shapiro_test(val) %>% 
+        dplyr::mutate(normal = p > 0.05, method = "sqrt")
+      
+      # If still not normal, square transform
+      if(!all(norm$normal) && nrow(norm[norm$normal, ]) < 5) {
+        z <- dplyr::mutate(y, val = val ^ 2)
+        norm <- group_by(z, Treatment) %>% 
+          shapiro_test(val) %>% 
+          dplyr::mutate(normal = p > 0.05, method = "sqr")
       }
     }
-  })
-}, simplify = FALSE, USE.NAMES = TRUE)
-
-# CLEVER DATA EXPORT GOES HERE :) You're a champ
-
-tests2 <- foreach(x = names(tests)) %do% {
-  x_list <- tests[[x]]
-  foreach(i = names(x_list)) %do% {
-    i_list <- x_list[[i]]
-    foreach(j = names(i_list)) %do% {
-      j_df <- x_list[[i]][[j]] %>% 
-        dplyr::mutate(method = j, variable = i, dataset = x)
-    } %>% magrittr::set_names(names(i_list))
-  } %>% magrittr::set_names(names(x_list))
-} %>% magrittr::set_names(names(tests))
-
-tests3 <- foreach(i = names(tests2[[1]])) %do% {
-  a <- lapply(tests2, "[[", i)
-  foreach(j = 1:max(sapply(a, length))) %do% {
-    b <- try(lapply(a, "[[", j) %>% do.call(bind_rows, .), silent = TRUE)
-    if(class(b) == "try-error") {
-      b <- a[[2]][[j]]
-    } else b
-    b[nrow(b) + 1, ] <- NA
-    b
-  } %>% magrittr::set_names(c("levene", "shapiro", "anova", "tukey")[1:length(a[[2]])])
-} %>% magrittr::set_names(names(tests2[[1]]))
-
-foreach(i = names(tests3)) %do% {
-  file_out <- file.path(results_dir, paste0(i, "_analysis.csv"))
-  if(file.exists(file_out)) unlink(file_out)
-  foreach(j = 1:length(tests3[[i]])) %do% {
-    write.table(tests3[[i]][[j]], file.path(results_dir, paste0(i, "_analysis.csv")), 
-                append = TRUE, row.names = FALSE, sep = ",", na = "")
+  } else z <- y
+  
+  # If still not normal, run Kruskal Wallis test on untransformed data with 
+  # pairwise comparisons. Not sure which is better to use (dunn vs wilcox)
+  if(!all(norm$normal) && nrow(norm[norm$normal, ]) < 5) {
+    kruskal <- kruskal_test(val ~ Treatment, data = y) %>% 
+      dplyr::mutate(test = "Kruskal")
+    pwc_dunn <- dunn_test(val ~ Treatment, data = y, p.adjust.method = "bonferroni") %>% 
+      dplyr::mutate(test = "Dunn")
+    pwc_wilcox <- wilcox_test(val ~ Treatment, data = y, p.adjust.method = "bonferroni") %>% 
+      dplyr::mutate(test = "Wilcox")
+    return(list(
+      data = {dplyr::rename(y, !!vars[x] := val)}, 
+      norm = {group_by(y, Treatment) %>% shapiro_test(val) %>% 
+          dplyr::mutate(normal = p > 0.05, method = "kruskal")}, 
+      kruskal = kruskal, pairwise_dunn = pwc_dunn, pairwise_wilcox = pwc_wilcox))
+  } else {
+    # Homogeneity of variances
+    variance <- levene_test(val ~ Treatment, data = z) %>% 
+      dplyr::mutate(homogenous = p > 0.05, test = "Levene")
+    if(variance$homogenous) {
+      anova <- data.frame(anova_test(val ~ Treatment, data = z)) %>% 
+        dplyr::mutate(test = "ANOVA")
+      tukey <- tukey_hsd(z, val ~ Treatment) %>% 
+        dplyr::mutate(test = "Tukey")
+      welch <- NULL
+      g_h <- NULL
+    } else {
+      anova <- NULL
+      tukey <- NULL
+      welch <- welch_anova_test(val ~ Treatment, data = z) %>% 
+        dplyr::mutate(test = "Welch ANOVA")
+      g_h <- games_howell_test(val ~ Treatment, data = z) %>% 
+        dplyr::mutate(test = "Games Howell")
+    }
+    return(Filter(Negate(is.null), list(
+      data = {dplyr::rename(z, !!paste0(norm$method[1], "_", vars[x]) := val)}, 
+      norm = norm, variance = variance, anova = anova, welch = welch, 
+      tukey = tukey, games_howell = g_h)))
   }
-}
+}) %>% magrittr::set_names(vars)
+
+# Write outputs
+lapply(vars, function(x) {
+  v <- one_way[[x]]
+  file_out <- file.path(results_dir, paste0(x, "_Analysis.csv"))
+  for(i in names(v)) {
+    if(i == names(v)[1]) unlink(file_out)
+    out <- v[[i]]
+    out[nrow(out) + 1, ] <- NA
+    write.table(out, file_out, append = TRUE, sep = ",", 
+                row.names = FALSE, na = "")}})
 
 ```
 
-I don't think I'll plot any of this, but we can understand from above that no amount of transforming the data would help make it normal and nonparametric Kruskal Wallace tests were required. 
+The next part will involve transforming the original field dataset to allow the repeated measures anova to run as expected for leaves and height separately.
 
-The next part will involve using the original dataset and performing paired t-tests from planting to harvesting. This will also be where I generate figures.
+```{r Two way Repeated Measures data prep}
 
-```{r Paired ttest analysis}
-
-field_nozero <- field %>% mutate(across(everything(), ~na_if(., 0))) %>% drop_na()
 leaves <- dplyr::select(field, Treatment, Rep, Planting_Leaves, Harvest_Leaves) %>% 
   pivot_longer(c(Planting_Leaves, Harvest_Leaves)) %>% 
   dplyr::mutate(name = factor(name, levels = c("Planting_Leaves", "Harvest_Leaves")))
@@ -189,199 +139,117 @@ height <- dplyr::select(field, Treatment, Rep, Planting_Height, Harvest_Height) 
   pivot_longer(c(Planting_Height, Harvest_Height)) %>% 
   dplyr::mutate(name = factor(name, levels = c("Planting_Height", "Harvest_Height")))
 
-leaves_nozero <- dplyr::select(field_nozero, Treatment, Rep, Planting_Leaves, Harvest_Leaves) %>% 
-  pivot_longer(c(Planting_Leaves, Harvest_Leaves)) %>% 
-  dplyr::mutate(name = factor(name, levels = c("Planting_Leaves", "Harvest_Leaves")))
-height_nozero <- dplyr::select(field_nozero, Treatment, Rep, Planting_Height, Harvest_Height) %>% 
-  pivot_longer(c(Planting_Height, Harvest_Height)) %>% 
-  dplyr::mutate(name = factor(name, levels = c("Planting_Height", "Harvest_Height")))
-
-ls <- list(leaves = leaves, height = height, 
-           leaves_nozero = leaves_nozero, height_nozero = height_nozero)
-
-paired_results <- lapply(ls, function(x) {
-  aov <- aov(value ~ name, data = x)
-  resid <- residuals(aov)
-  shapiro <- shapiro.test(resid) %>% tidy()
-  if(shapiro$p.value > 0.05) {
-    levene <- leveneTest(value ~ name, data = x) %>% drop_na()
-    var_eq <- if(levene$`Pr(>F)` > 0.05) TRUE else FALSE
-    ttest <- t.test(value ~ name, data = x, paired = TRUE, var.equal = var_eq) %>% tidy()
-    return(list(shapiro = shapiro, levene = levene, ttest = ttest))
-  } else {
-    # Try log transform
-    y <- dplyr::mutate(x, value = log10(value + 1))
-    aov <- aov(value ~ name, data = y)
-    resid <- residuals(aov)
-    shapiro <- shapiro.test(resid) %>% tidy()
-    if(shapiro$p.value > 0.05) {
-      levene <- leveneTest(value ~ name, data = y) %>% drop_na()
-      var_eq <- if(levene$`Pr(>F)` > 0.05) TRUE else FALSE
-      ttest <- t.test(value ~ name, data = y, paired = TRUE, var.equal = var_eq) %>% tidy()
-      return(list(log_shapiro = shapiro, log_levene = levene, log_ttest = ttest))
-    } else {
-      # Try square root transform
-      y <- dplyr::mutate(x, value = sqrt(value))
-      aov <- aov(value ~ name, data = y)
-      resid <- residuals(aov)
-      shapiro <- shapiro.test(resid) %>% tidy()
-      if(shapiro$p.value > 0.05) {
-        levene <- leveneTest(value ~ name, data = y) %>% drop_na()
-        var_eq <- if(levene$`Pr(>F)` > 0.05) TRUE else FALSE
-        ttest <- t.test(value ~ name, data = y, paired = TRUE, var.equal = var_eq) %>% tidy()
-        return(list(sqrt_shapiro = shapiro, sqrt_levene = levene, sqrt_ttest = ttest))
-      } else {
-        # Try squaring
-        y <- dplyr::mutate(x, value = value ^ 2)
-        aov <- aov(value ~ name, data = y)
-        resid <- residuals(aov)
-        shapiro <- shapiro.test(resid) %>% tidy()
-        if(shapiro$p.value > 0.05) {
-          levene <- leveneTest(value ~ name, data = y) %>% drop_na()
-          var_eq <- if(levene$`Pr(>F)` > 0.05) TRUE else FALSE
-          ttest <- t.test(value ~ name, data = y, paired = TRUE, var.equal = var_eq) %>% tidy()
-          return(list(shapiro_sqr = shapiro, levene_sqr = levene, ttest_sqr = ttest))
-        } else {
-          ttest <- wilcox.test(value ~ name, data = x, paired = TRUE) %>% tidy()
-          return(list(shapiro = shapiro, wilcox = ttest))
-        }
-      }
-    }
-  }
-})
-
-# All tests passed, only need to output shapiro and ttest results
-shap_ids <- grep("shapiro", unique(unlist(lapply(paired_results, names))), value = TRUE)
-leve_ids <- grep("levene", unique(unlist(lapply(paired_results, names))), value = TRUE)
-ttest_ids <- grep("ttest|wilcox", unique(unlist(lapply(paired_results, names))), value = TRUE)
-paired_shapiro <- lapply(shap_ids, function(x) 
-  lapply(paired_results, "[[", x) %>% do.call(rbind, .) %>% 
-    rownames_to_column("variable")) %>% do.call(bind_rows, .)
-paired_levene <- lapply(leve_ids, function(x) 
-  lapply(paired_results, "[[", x) %>% do.call(rbind, .) %>% 
-    rownames_to_column("variable")) %>% do.call(bind_rows, .)
-paired_ttest <- lapply(ttest_ids, function(x) 
-  lapply(paired_results, "[[", x) %>% do.call(rbind, .) %>% 
-    rownames_to_column("variable")) %>% do.call(bind_rows, .)
-
-write.csv(paired_shapiro, file.path(results_dir, "paired_ttest_shapiro.csv"), row.names = FALSE)
-write.csv(paired_levene, file.path(results_dir, "paired_ttest_levene.csv"), row.names = FALSE)
-write.csv(paired_ttest, file.path(results_dir, "paired_ttest_analysis.csv"), row.names = FALSE)
-
-```
-
-Paired tests are wrong - must use repeated measures anova to find differences between the two times and within the groups
-
-```{r repeated measures anova}
-
-rep_anova <- lapply(ls, function(x) {
-  # First, check outliers
-  outliers <- lapply(as.character(unique(x$name)), function(y) {
-    z <- dplyr::filter(x, name == y) %>% 
-      dplyr::pull(value)
-    q1 <- quantile(z, 0.25, na.rm = TRUE)
-    q3 <- quantile(z, 0.75, na.rm = TRUE)
-    iqr <- IQR(z, na.rm = TRUE)
-    upper_limit <- q3 + (3 * iqr)
-    lower_limit <- q1 - (3 * iqr)
-    outlier <- ifelse(z < lower_limit | z > upper_limit, TRUE, FALSE)
-      result <- expand.grid(name = y, id = which(outlier)) %>% 
-        cbind(value = x$value[which(outlier)])
-  }) %>% do.call(rbind, .)
-  
-  # If outliers are present, remove them
-  if(nrow(outliers) > 0) {
-    x <- x[c(outliers$id), c("Treatment", "Rep")] %>% 
-      anti_join(x = x, y = ., by = c("Treatment", "Rep"))
-  }
-  
-  # Next, test normality
-  norm_assum <- function(y, transform) {
-    aov <- aov(value ~ Treatment + Error(Rep), data = y)
-    resid <- residuals(aov$Within)
-    shapiro <- shapiro.test(resid) %>% tidy() %>% cbind(dat = transform)
-  }
-  
-  norm_test <- sapply(as.character(unique(x$name)), function(y) {
-    z <- dplyr::filter(x, name == y)
-    norm_assum(z, "normal")
-  }, simplify = FALSE, USE.NAMES = TRUE)
-  
-  if(any(sapply(norm_test, "[[", "p.value") <= 0.05)) {
-    norm_test2 <- sapply(as.character(unique(x$name)), function(y) {
-      z <- dplyr::filter(x, name == y) %>% 
-        dplyr::mutate(value = log10(value + 1))
-      norm_assum(z, "log")
-    }, simplify = FALSE, USE.NAMES = TRUE)
-    norm_test <- sapply(unique(names(c(norm_test, norm_test2))), function(y) 
-      do.call(rbind, lapply(list(norm_test, norm_test2), "[[", y)), simplify = FALSE, USE.NAMES = TRUE)
-  }
-  if(exists("norm_test2")) {
-    if(any(sapply(norm_test2, "[[", "p.value") <= 0.05)) {
-      norm_test2 <- sapply(as.character(unique(x$name)), function(y) {
-        z <- dplyr::filter(x, name == y) %>% 
-          dplyr::mutate(value = log10(value + 1))
-        norm_assum(z, "sqrt")
-      }, simplify = FALSE, USE.NAMES = TRUE)
-      norm_test <- sapply(unique(names(c(norm_test, norm_test2))), function(y) 
-        do.call(rbind, lapply(list(norm_test, norm_test2), "[[", y)), simplify = FALSE, USE.NAMES = TRUE)
-    }
-  }
-  if(exists("norm_test2")) {
-    if(any(sapply(norm_test2, "[[", "p.value") <= 0.05)) {
-      norm_test2 <- sapply(as.character(unique(x$name)), function(y) {
-        z <- dplyr::filter(x, name == y) %>% 
-          dplyr::mutate(value = value ^ 2)
-        norm_assum(z, "sqr")
-      }, simplify = FALSE, USE.NAMES = TRUE)
-      norm_test <- sapply(unique(names(c(norm_test, norm_test2))), function(y) 
-        do.call(rbind, lapply(list(norm_test, norm_test2), "[[", y)), simplify = FALSE, USE.NAMES = TRUE)
-    }
-  }
-  if(exists("norm_test2")) {
-    if(any(sapply(norm_test2, "[[", "p.value") <= 0.05)) {
-      y <- names(which.min(sapply(lapply(norm_test, "[[", "p.value"), min)))
-      met <- norm_test[[y]]$dat[which.max(norm_test[[y]]$p.value)]
-      norm_test <- lapply(norm_test, function(z) dplyr::filter(z, dat == met))
-      if(met == "log") {
-        x <- dplyr::mutate(x, value = log10(value + 1))
-      } else if(met == "sqrt") {
-        x <- dplyr::mutate(x, value = log10(value + 1))
-      } else if(met == "sqr") {
-        x <- dplyr::mutate(x, value = value ^ 2)
-      } else x <- x
-    } else {
-      met <- "sqr"
-      x <- dplyr::mutate(x, value = value ^ 2)
-    }
-  } else met <- "normal"
-  
-  y <- pivot_wider(x, names_from = name) %>% 
-    dplyr::select(x$name) %>% 
-    as.matrix()
-  
-  # Finally, a Sphericity test. Not so important if it fails
-  mauchly <- mauchly.test(lm(y ~ 1), X = ~ 1) %>% tidy()
-  
-  anova <- aov(value ~ Treatment * name + Error(Rep), data = x) %>% tidy()
-  return(list(anova = anova, result = met, shapiro = norm_test, mauchly = mauchly, 
-              data = x))
-})
+ls <- list(leaves = leaves, height = height)
 
 ```
 
 Normality is violated in any scenario because of the 0's in the harvesting dataset. Because this experiment had poor results, I chose to use the repeated measures anova anyways. Of the data that is not 0 and that are not outliers, it ends up falling within the normal boundaries, which can be seen here:
 
-```{r}
+```{r Normality plots}
 
-ggqqplot(rep_anova[[1]]$data, "value", facet.by = "name")
-ggqqplot(rep_anova[[2]]$data, "value", facet.by = "name")
+ggqqplot(leaves, "value", ggtheme = theme_bw()) +
+    facet_grid(name ~ Treatment, labeller = "label_both")
+ggqqplot(height, "value", ggtheme = theme_bw()) +
+    facet_grid(name ~ Treatment, labeller = "label_both")
 
 ```
 
-Moving on to the plots
+Proceeding with a two way repeated measures ANOVA. I originally tried removing outliers from the analysis but then R wasn't able to run a sphericity test because the dataset was unbalanced. The code for removing the outliers is commented out here because of that.
 
-```{r Paired ttest plots}
+```{r two way repeated measures ANOVA}
+
+# Do some similar things from previously in case I delete it
+rep_anova <- lapply(ls[!endsWith(names(ls), "nozero")], function(x) {
+  # First, check outliers
+  outliers <- group_by(x, Treatment, name) %>%
+    identify_outliers(value) %>% 
+    dplyr::filter(is.extreme)
+  
+  # If outliers are present, remove them
+  # if(nrow(outliers) > 0) {
+  #   x <- anti_join(x, outliers, by = c("Treatment", "Rep"))
+  # }
+  
+  # Normality assumption requires at least 3 and 2 unique values to compute
+  shapiro <- group_by(x, Treatment, name) %>% 
+    mutate(n = length(unique(value))) %>% 
+    # ungroup(name) %>% 
+    # mutate(n = ifelse(any(n == 1), 1, n)) %>% 
+    # group_by(name, .add = TRUE) %>% 
+    dplyr::filter(n > 1) %>% 
+    dplyr::select(-n) %>% 
+    dplyr::rename(val = value) %>% 
+    shapiro_test(val) %>% 
+    dplyr::mutate(normal = p > 0.05)
+  
+  norm_plot <- ggqqplot(x, "value", ggtheme = theme_bw()) +
+    facet_grid(name ~ Treatment, labeller = "label_both")
+  
+  if(nrow(shapiro[shapiro$normal, ]) < 0.7 * nrow(shapiro))
+    warning("Some of the data is not normally distributed")
+  
+  # Use the rstatix package, it's robust and fairly simple to use. See here:
+  # https://www.datanovia.com/en/lessons/repeated-measures-anova-in-r/#two-way-repeated-measures-anova
+  
+  # First, perform 2-way repeated measures ANOVA
+  res.aov <- anova_test(
+    data = x, dv = value, wid = Rep,
+    within = c(Treatment, name), detailed = TRUE)
+  
+  # Next, post-hoc analyses. The analyses will generate p-values initially;
+  # these may be representative of a single pairwise t-test with no context of
+  # the rest of the dataset. The bonferroni adjustment will take into account 
+  # the whole dataset. In this case, there for pairwise treatment tests, there
+  # are 21 different combinations of treatment comparisons. A standard pairwise
+  # t-test might wind up with a p-value of 0.03; however, when adjusted, the 
+  # p-value becomes 0.03 * 21 (taking into account the groupings) = 0.63, making
+  # that comparison non-significant.
+  
+  # Effect of treatment at each time point
+  one_way_treatment <- group_by(x, name) %>%
+    anova_test(dv = value, wid = Rep, within = Treatment) %>%
+    get_anova_table() %>%
+    adjust_pvalue(method = "bonferroni")
+  # Pairwise comparisons between treatment groups
+  pwc_treatment <- group_by(x, name) %>%
+    pairwise_t_test(
+      value ~ Treatment, paired = TRUE,
+      p.adjust.method = "bonferroni")
+  
+  # Effect of time at each level of treatment
+  one_way_time <- group_by(x, Treatment) %>%
+    anova_test(dv = value, wid = Rep, within = name) %>%
+    get_anova_table()%>%
+    adjust_pvalue(method = "bonferroni")
+  # Pairwise comparisons between time points
+  pwc_time <- group_by(x, Treatment) %>%
+    pairwise_t_test(
+      value ~ name, paired = TRUE,
+      p.adjust.method = "bonferroni")
+  
+  return(list(
+    outliers = outliers, shapiro = shapiro, norm_plot = norm_plot, 
+    mauchly = res.aov$`Mauchly's Test for Sphericity`, anova = res.aov$ANOVA, 
+    treatment_effect = one_way_treatment, time_effect = one_way_time, 
+    pairwise_treatment = pwc_treatment, pairwise_time = pwc_time))})
+
+# Write outputs
+for(i in names(rep_anova[[1]])[!names(rep_anova[[1]]) %in% "norm_plot"]) {
+  j <- lapply(rep_anova, "[[", i)
+  for(k in names(j)) {
+    file_out <- file.path(results_dir, paste0("repeated_measures_", k, ".csv"))
+    if(i == names(rep_anova[[1]])[1]) file.remove(file_out)
+    l <- j[[k]]
+    l$table_id <- i
+    l[nrow(l) + 1, ] <- NA
+    write.table(l, file_out, append = TRUE, sep = ",", 
+                na = "", row.names = FALSE)}}
+
+```
+
+Moving on to the plots where lines are drawn between individuals indicating which direction they changed.
+
+```{r Pairwise plots between time points}
 
 plots <- lapply(ls, function(x) {
   df <- pivot_wider(x, names_from = "name") %>% 
@@ -440,53 +308,15 @@ n_leaves_and_height <- ggarrange(plotlist = plots[1:2], common.legend = TRUE, le
 
 ```
 
-The final thing to work on is the biomass data. Ideally, a one way ANOVA will be all that is needed to determine differences in biomass (this is to be taken with a grain of salt, the data sucks):
-
-```{r Biomass data}
-
-bmass_aov <- aov(Biomass ~ Treatment, data = field)
-bmass_levene <- leveneTest(Biomass ~ Treatment, data = field) %>% tidy() %>% drop_na()
-bmass_resid <- residuals(bmass_aov)
-bmass_shapiro <- shapiro.test(bmass_resid) %>% tidy()
-
-# Variance ok, normality not so much. Transform?
-field <- dplyr::mutate(field, LogMass = log10(Biomass + 1))
-lmass_aov <- aov(LogMass ~ Treatment, data = field)
-lmass_levene <- leveneTest(LogMass ~ Treatment, data = field) %>% tidy() %>% drop_na()
-lmass_resid <- residuals(lmass_aov)
-lmass_shapiro <- shapiro.test(lmass_resid) %>% tidy()
-
-field <- dplyr::mutate(field, bmass2 = Biomass ^ 2)
-smass_aov <- aov(bmass2 ~ Treatment, data = field)
-smass_levene <- leveneTest(bmass2 ~ Treatment, data = field) %>% tidy() %>% drop_na()
-smass_resid <- residuals(smass_aov)
-smass_shapiro <- shapiro.test(smass_resid) %>% tidy()
-
-field <- dplyr::mutate(field, bmass_sq = sqrt(Biomass))
-sqmass_aov <- aov(bmass_sq ~ Treatment, data = field)
-sqmass_levene <- leveneTest(bmass_sq ~ Treatment, data = field) %>% tidy() %>% drop_na()
-sqmass_resid <- residuals(sqmass_aov)
-sqmass_shapiro <- shapiro.test(sqmass_resid) %>% tidy()
-
-# square root transformation worked, perform parametric one way anova
-anova_sqmass <- anova(sqmass_aov) %>% tidy()
-tukey_sqmass <- TukeyHSD(sqmass_aov) %>% tidy()
-
-# The data show no differences between any groups.
-write.csv(sqmass_shapiro, file.path(results_dir, "biomass_shapiro.csv"), row.names = FALSE)
-write.csv(sqmass_levene, file.path(results_dir, "biomass_levene.csv"), row.names = FALSE)
-write.csv(anova_sqmass, file.path(results_dir, "biomass_anova.csv"), row.names = FALSE)
-write.csv(tukey_sqmass, file.path(results_dir, "biomass_tukey.csv"), row.names = FALSE)
-
-```
-
 Identify some broad trends with the data. First, try to find trends using the whole dataset. After, filter the data to only include plants that survived and then run similar trend analyses.
 
-```{r}
+```{r Summarized data}
 
 field_sum <- group_by(field, Treatment) %>% 
+  group_by(Treatment) %>% 
   add_tally() %>% 
-  dplyr::summarise(across(everything(), mean), .groups = "drop")
+  dplyr::summarise(across(everything(), c(mean, sd)), .groups = "drop") %>% 
+  dplyr::mutate(across(ends_with("_2"), ~ .x / sqrt(n_1)))
 
 field_sum_nozero <- dplyr::filter(field, Harvest_Height > 0 | Harvest_Leaves > 0) %>% 
   group_by(Treatment) %>% 
@@ -494,6 +324,8 @@ field_sum_nozero <- dplyr::filter(field, Harvest_Height > 0 | Harvest_Leaves > 0
   dplyr::summarise(across(everything(), c(mean, sd)), .groups = "drop") %>% 
   dplyr::mutate(across(ends_with("_2"), ~ .x / sqrt(n_1)))
 
+names(field_sum) <- gsub("_2", "_se", names(field_sum))
+names(field_sum) <- gsub("_1", "_mean", names(field_sum))
 names(field_sum_nozero) <- gsub("_2", "_se", names(field_sum_nozero))
 names(field_sum_nozero) <- gsub("_1", "_mean", names(field_sum_nozero))
 
@@ -501,4 +333,3 @@ write.csv(field_sum_nozero, file.path(results_dir, "field_summary_nozero.csv"), 
 write.csv(field_sum, file.path(results_dir, "field_summary.csv"), row.names = FALSE)
 
 ```
-
